--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "blessnetwork-bot-js",
-  "version": "0.1",
+  "version": "0.1.4",
   "description": "https://github.com/cmalf/blessnetwork-bot-js",
-  "main": "bless.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node bless.js"
+    "start": "node index.js"
   },
   "author": "furqonflynn",
   "license": "GPL-3.0",
@@ -12,6 +12,7 @@
     "axios": "^1.7.9",
     "fs": "^0.0.1-security",
     "https-proxy-agent": "^7.0.6",
+    "puppeteer-real-browser": "^1.4.2",
     "readline": "^1.3.0",
     "socks-proxy-agent": "^8.0.5" 
   }
